<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>be.nbb.sdmx</groupId>
    <artifactId>sdmx-facade-parent</artifactId>
    <version>2.2.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>sdmx-facade-api</module>
        <module>sdmx-facade-util</module>
        <module>sdmx-facade-file</module>
        <module>sdmx-facade-samples</module>
        <module>sdmx-facade-web</module>
    </modules>

    <properties>
        <!-- build -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>
        <!-- dependencies -->
        <jsr305.version>3.0.2</jsr305.version>
        <lombok.version>1.16.18</lombok.version>
        <junit.version>4.12</junit.version>
        <assertj.version>3.8.0</assertj.version>
    </properties>
    
    <dependencyManagement>
        <dependencies>
            <!-- dev tools -->
            <dependency>     
                <groupId>com.google.code.findbugs</groupId>
                <artifactId>jsr305</artifactId>
                <version>${jsr305.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
            </dependency>
            <!-- modules -->
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>sdmx-facade-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>sdmx-facade-util</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>sdmx-facade-web</artifactId>
                <version>${project.version}</version>
            </dependency>            
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>sdmx-facade-file</artifactId>
                <version>${project.version}</version>
            </dependency>            
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>sdmx-facade-samples</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>